# prometheus-demo

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-push-image.yaml
prometheus_demo/: main.py
