[tool.poetry]
name = "prometheus-demo"
version = "0.1.0"
description = "Python application demonstrating the functionality of Prometheus and Grafana"
authors = ["Ayaz Abbas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.20.0"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pyflakes = "^3.2.0"
pyright = "^1.1.363"

[tool.poetry.scripts]
prometheus-demo = "prometheus_demo.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
